//
//  Constants.swift
//  KBC-task
//
//  Created by Petar Nestorov on 13.04.25.
//

import Foundation

// MARK: - Accessibility Identifiers

public struct AccessibilityIdentifiers {
    
    struct Screens {
        static let CarSetupScreen = "CarSetupScreen"
        static let TrafficLightScreen = "TrafficLightScreen"
    }
    
    struct Texts {
        static let ErrorText = "ErrorText"
        static let CarModelNameText = "CarModelNameText"
    }
    
    struct TextFields {
        static let CarModelTextField = "CarModelTextField"
    }
    
    struct Buttons {
        static let StartDrivingButton = "StartDrivingButton"
    }
    
    struct TrafficLightCircles {
        static let TrafficLightCircleRed = "TrafficLightCircle_Red"
        static let TrafficLightCircleOrange = "TrafficLightCircle_Orange"
        static let TrafficLightCircleGreen = "TrafficLightCircle_Green"
    }
    
}

